src/styles/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');

@import '@fortawesome/fontawesome-free/css/fontawesome.css';
@import '@fortawesome/fontawesome-free/css/regular.css';
@import '@fortawesome/fontawesome-free/css/solid.css';
@import '@fortawesome/fontawesome-free/css/brands.css';

@import 'tippy.js/dist/tippy.css';

@import 'firebaseui/dist/firebaseui.css';
@import 'src/styles/firebase-changes.scss';


@import 'src/styles/variables.scss';

// scrollbar
// @media screen and (min-width:768px) {
//   * {
//     &::-webkit-scrollbar-track {
//       // margin: (-$gap);
//     }

//     &::-webkit-scrollbar {
//       width: $gap * 2;
//       height: $gap * 2;
//     }

//     &::-webkit-scrollbar-thumb {
//       background-clip: padding-box;
//       border: solid transparent;
//       border-width: $gap $gap $gap 0;
//       background-color: var(--color-border);
//       min-width: 100px;
//       min-height: 100px;
//     }
//   }
// }

body.light-theme {
  --color-background-primary: white;
  --color-border: rgba(0, 0, 0, 0.2);
  --color-hover: rgba(0, 0, 0, 0.1);
  --color-text: black;
  --color-text-hover: rgb(28, 28, 28);
  --color-text-shadow: rgba(255, 255, 255, 0.65);
  --color-highlight: deepskyblue;
  --color-primary: #0075ff;
  --color-secondary: #155197;
  --color-positive: forestgreen;
  --color-negative: orangered;
  --color-overlay: rgba(255, 255, 255, 0.65);
  --color-dialog-background: rgba(0, 0, 0, 0.15);
}

body.dark-theme {
  --color-background-primary: #202124;
  --color-background-secondary: #2b2c2f;
  --color-border: rgba(255, 255, 255, 0.2);
  --color-hover: rgba(255, 255, 255, 0.1);
  --color-text-shadow: rgba(0, 0, 0, 0.65);
  --color-text: #e1e1e1;
  --color-text-hover: white;
  --color-primary: #0075ff;
  --color-secondary: #155197;
  --color-highlight: deepskyblue;
  --color-positive: yellowgreen;
  --color-negative: orangered;
  --color-overlay: rgba(0, 0, 0, 0.65);
  --color-dialog-background: rgba(0, 0, 0, 0.65);
}

// tippy
@media screen and (max-width:768px) {
  body>[data-tippy-root] {
    display: none;
  }
}

.tippy-box {
  background-color: var(--color-overlay);
  border-radius: $gap * 1.5;

  .tippy-content {
    color: var(--color-text);
    padding: $gap;
  }
}

.tippy-box[data-placement^='top']>.tippy-arrow::before {
  bottom: -8px;
  border-top-color: var(--color-overlay);
}

.tippy-box[data-placement^='bottom']>.tippy-arrow::before {
  top: -8px;
  border-bottom-color: var(--color-overlay);
}

.tippy-box[data-placement^='left']>.tippy-arrow::before {
  right: -8px;
  border-left-color: var(--color-overlay);
}

.tippy-box[data-placement^='right']>.tippy-arrow::before {
  left: -8px;
  border-right-color: var(--color-overlay);
}

.tippy-hover-menu-container {
  display: flex;
  flex-direction: column;
  align-items: stretch;

  .tippy-hover-menu-button {
    text-align: center;
    cursor: pointer;
    border-radius: 4px;
    padding: 4px 8px;

    &:hover {
      background-color: var(--color-border);
    }
  }
}

.fa-regular::before,
.fa-solid::before {
  min-width: 16px;
  display: inline-block;
  text-align: center;
}

.nowrap {
  white-space: nowrap;
}

.absolute {
  position: absolute !important;
}

.top {
  top: 0;
}

.right {
  right: 0;
}

.bottom {
  bottom: 0;
}

.left {
  left: 0;
}

.underline {
  text-decoration: underline;
}

.hover-container {
  .hover-visible {
    opacity: 0;
    pointer-events: none;
    position: absolute;
  }

  .hover-hidden {
    opacity: 1;
    pointer-events: all;
  }

  &:hover {
    .hover-visible {
      opacity: 1;
      pointer-events: all;
    }

    .hover-hidden {
      opacity: 0;
      pointer-events: none;
    }
  }
}

.h-separator {
  border-top: 1px solid var(--color-border);
  align-self: normal;

  &.gap {
    margin: $gap 0;
  }

  &.margins {
    width: calc(100% - 2 * $gap);
    align-self: center;
  }
}

.v-separator {
  border-right: 1px solid var(--color-border);
  align-self: normal;

  &.gap {
    margin: 0 $gap;
  }

  &.margins {
    height: calc(100% - 2 * $gap);
    align-self: center;
  }
}

.cursor-pointer {
  cursor: pointer;
}

html,
body {
  width: 100%;
  height: 100%;
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
}

body {
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

i {
  font-style: normal;
}

input,
textarea {
  min-width: 50px;
  min-height: $button-height;
  padding: 0 $gap;
  border: 0;
  color: var(--color-text);
  background-color: transparent;

  &:focus-visible {
    outline: initial;
  }
}

select {
  padding: 2.2px 2.2px;
  background-color: transparent;

  >option {
    color: var(--color-text);
    background-color: var(--color-background-primary);
  }
}

input,
select,
textarea {
  min-height: $button-height;
  display: flex;
  align-items: center;
  overflow-wrap: anywhere;
  border-radius: $gap * 0.5;
  box-sizing: border-box;
  border: 1px solid var(--color-border);
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  font-weight: inherit;

  &:focus-visible {
    outline: initial;
  }
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

.display-none {
  display: none !important;
}

@media screen and (min-width:768px) {
  .mobile-only {
    display: none !important;
  }
}

@media screen and (max-width:768px) {
  .desktop-only {
    display: none !important;
  }
}

.transparent {
  opacity: 0 !important;
  visibility: hidden !important;
  pointer-events: none !important;
}

.opacity-0,
.opacity-000 {
  opacity: 0 !important;
}

.opacity-025 {
  opacity: 0.25 !important;
}

.opacity-050 {
  opacity: 0.5 !important;
}

.opacity-075 {
  opacity: 0.75 !important;
}

.opacity-1,
.opacity-100 {
  opacity: 1 !important;
}

.disabled {
  opacity: 0.25 !important;
  pointer-events: none !important;
}

.pointer-events-none {
  pointer-events: none !important;
}

.flex-0 {
  flex: 0 !important;
}

hr {
  margin: 0;
  border-color: var(--color-text);
  border-style: solid;
  border-width: 2px;
  border-bottom: 0;
  border-left: 0;
}

.highlight {
  color: var(--color-highlight);
}

.positive {
  color: var(--color-positive);
}

.negative {
  color: var(--color-negative);
}

.grayscale {
  filter: grayscale(1);
}

.hover-brighten {
  &:hover {
    filter: brightness(1.5);
  }
}

.stack-container {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-areas: "content";

  >* {
    grid-area: content;
  }
}

.width-auto {
  width: auto;
}

.width-fit {
  width: fit-content;
}

.height-auto {
  height: auto;
}

.white-space-nowrap {
  white-space: nowrap;
}

.button {
  width: fit-content;
  min-width: $button-height;
  min-height: $button-height;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: $gap;
  cursor: pointer;
  user-select: none;
  padding: 0 $gap;
  box-sizing: border-box;
  border: 1px solid var(--color-border);

  background-color: var(--color-hover);
  // text-shadow: -0.5px 0 var(--color-text-shadow), 0 0.5px var(--color-text-shadow), 0.5px 0 var(--color-text-shadow), 0 -0.5px var(--color-text-shadow);

  transition-property: background-color, opacity;
  transition-duration: $transition-duration;

  &:hover {
    background-color: rgba(255, 255, 255, 0.2) !important;
  }
}

.icon-button,
.icon-button-small {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: $gap;
  text-shadow: -1px 0 var(--color-text-shadow), 0 1px var(--color-text-shadow), 1px 0 var(--color-text-shadow), 0 -1px var(--color-text-shadow);
  box-sizing: border-box;

  @media screen and (min-width:768px) {
    cursor: pointer;
    border: 1px solid transparent;

    transition-property: border-color, background-color;
    transition-duration: $transition-duration * 0.5;

    &:hover {
      border-color: rgba(0, 0, 0, 0.3);
      background-color: rgba(255, 255, 255, 0.3) !important;
    }
  }
}

.icon-button {
  width: $button-height;
  height: $button-height;
  min-width: $button-height;
  min-height: $button-height;
}

.icon-button-small {
  width: $button-height * 0.66;
  height: $button-height * 0.66;
  min-width: $button-height * 0.66;
  min-height: $button-height * 0.66;
}

span.button,
span.icon-button {
  user-select: none;
}

.dragging {
  opacity: 0.5;
}

.x-scrollbar-container {
  overflow-x: auto;
  overflow-y: hidden;
}

.y-scrollbar-container {
  overflow-x: hidden;
  overflow-y: auto;
}

.user-select-none {
  user-select: none;
}

.flex {
  display: flex;

  &.row {
    flex-direction: row;
  }

  &.column {
    flex-direction: column;
  }

  &.grow {
    flex: 1;
  }

  &.flex-start-h {
    justify-content: flex-start;
  }

  &.flex-start-v {
    align-items: flex-start;
  }

  &.flex-end-h {
    justify-content: flex-end;
  }

  &.flex-end-v {
    align-items: flex-end;
  }
}

.gap,
.gap-1 {
  gap: $gap;
}

.gap-2 {
  gap: $gap * 2;
}

.gap-3 {
  gap: 1rem;
}

.margins-1 {
  margin: $gap;
}

.margins-1-v {
  margin-top: $gap;
  margin-bottom: $gap;
}

.margins-1-h {
  margin-left: $gap;
  margin-right: $gap;
}

.margins-2 {
  margin: $gap * 2;
}

.margins-2-v {
  margin-top: $gap * 2;
  margin-bottom: $gap * 2;
}

.margins-2-h {
  margin-left: $gap * 2;
  margin-right: $gap * 2;
}

.margins-3 {
  margin: 1rem;
}

.margins-3-v {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.margins-3-h {
  margin-left: 1rem;
  margin-right: 1rem;
}

.center {
  align-items: center;
  justify-items: center;
  justify-content: center;
}

